# fast-fmm-rpy2

./: .zenodo.json  README.md  patch_notes.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml  test_publish.yaml
fast_fmm_rpy2/: __init__.py  fmm_run.py  plot_fui.py
notebooks/: fastFMM copy.ipynb  fastFMM.ipynb  fastFMM_concurrent.ipynb
tests/: test_fmm.py  test_fmm_v2.py  test_plot_fui.py  test_read_csv.py
