[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast_fmm_rpy2"
version = "0.1.0"
description = "FLMM rpy2 wrapper for analyzing Fiber Photometry data"
authors = [
    {name = "Josh Lawrimore", email = "josh.lawrimore@nih.gov"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}  # Add a LICENSE file if you have one

dependencies = [
    "rpy2",
    "jupyter",
    "pandas",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "pandas-stubs",
    "ruff",
]

[tool.setuptools]
packages = {find = {}}

[tool.ruff]
exclude = [
    ".venv",
    "*.ipynb",
]

# Same as Black.
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = [
    "F",    # pyflakes F codes
    "I",    # isort codes
    "W",    # pycodestyle warning codes
    "E4",   # subset of the pycodestyle Error codes
    "E7",
    "E9",
    "E501",
]

[tool.ruff.format]
# Configure Black style
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
