[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast_fmm_rpy2"
version = "0.1.0"
description = "FLMM rpy2 wrapper for analyzing Fiber Photometry data"
authors = [
    {name = "Josh Lawrimore", email = "josh.lawrimore@nih.gov"}
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "rpy2",
    "jupyter",
    "pandas",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "pandas-stubs",
    "ruff",
    "bump-my-version",
]

[project.urls]
Homepage = "https://github.com/gloewing/photometry_FLMM"
Issues = "https://github.com/gloewing/photometry_FLMM/issues"
"Original R CRAN package" = "https://cran.r-project.org/web/packages/fastFMM/index.html"

[tool.setuptools]
packages = {find = {}}

[tool.ruff]
exclude = [
    ".venv",
    "*.ipynb",
]

line-length = 79
indent-width = 4

[tool.ruff.lint]
select = [
    "F",    # pyflakes F codes
    "I",    # isort codes
    "W",    # pycodestyle warning codes
    "E4",   # subset of the pycodestyle Error codes
    "E7",
    "E9",
    "E501",
]

[tool.ruff.format]
# Configure Black style
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
tag = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
commit = true
message = "Bump version: {current_version} → {new_version}"
